[project]
name = "rag-with-multiple-datasources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.22",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-tools>=0.1.34",
    "langchainhub>=0.1.21",
    "langserve>=0.3.3",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.3",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
    "wikipedia>=1.4.0",
]
